# QTChat

./: .gitignore  README.md
ChatServer/: AsioIOServicePool.cpp  CMakeLists.txt  CServer.h  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServiceImpl.cpp  ChatServiceImpl.h  Const.h  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  MysqlDao.cpp  MysqlDao.h  RedisMgr.h  StatusGrpcClient.h  config.ini  message.grpc.pb.h
Client/: CMakeLists.txt  config.ini  main.cpp  res.qrc
Client/chat/: CMakeLists.txt  adduseritem.cpp  adduseritem.ui  applyfriend.cpp  applyfriend.ui  applyfrienditem.cpp  applyfrienditem.ui  applyfriendlist.cpp  applyfriendpage.cpp  applyfriendpage.ui  authenfriend.cpp  authenfriend.h  authenfriend.ui  bubbleframe.cpp  chatdialog.cpp  chatdialog.ui  chatpage.cpp  chatpage.ui  chatuserlist.cpp  chatuserwid.cpp  chatuserwid.ui  chatview.cpp  contactuserlist.cpp  conuseritem.cpp  conuseritem.ui  customizeedit.cpp  findfaildlg.cpp  findfaildlg.ui  findsuccessdlg.cpp  findsuccessdlg.ui  friendinfopage.cpp  friendinfopage.ui  friendlabel.cpp  friendlabel.ui  grouptipitem.cpp  grouptipitem.ui  listitembase.cpp  mainwindow.cpp  mainwindow.ui  messagetextedit.cpp  (+4 more)
Client/chat/include/: adduseritem.h  applyfriend.h  applyfrienditem.h  applyfriendlist.h  applyfriendpage.h  chatdialog.h  chatitembase.h  chatpage.h  chatuserlist.h  chatuserwid.h  chatview.h  contactuserlist.h  conuseritem.h  customizeedit.h  findsuccessdlg.h  friendinfopage.h  friendlabel.h  grouptipitem.h  listitembase.h  mainwindow.h  messagetextedit.h  picturebubble.h  searchlist.h  statewidget.h  textbubble.h
Client/common/: CMakeLists.txt  clickedlabel.cpp  clickedoncelabel.cpp  global.cpp  httpmgr.cpp  loadingdlg.cpp  tcpmgr.cpp  userdata.cpp  usermgr.cpp
Client/common/include/: Singleton.h  clickedbtn.h  global.h  httpmgr.h  tcpmgr.h  userdata.h  usermgr.h
Client/customize/: CMakeLists.txt  chatitembase.cpp  clickedbtn.cpp  loadingdlg.ui  timerbtn.cpp
Client/customize/include/: bubbleframe.h  clickedlabel.h  clickedoncelabel.h  timerbtn.h
Client/login/: CMakeLists.txt  logindialog.cpp  logindialog.ui  registerdialog.cpp  registerdialog.ui  resetdialog.cpp  resetdialog.ui  timerbtn.cpp
Client/login/include/: logindialog.h  registerdialog.h  resetdialog.h
Client/res/: stylesheet.qss
GateServer/: AsioIOServicePool.h  CMakeLists.txt  CMakePresets.json  CServer.cpp  CServer.h  Const.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.h  StatusGrpcClient.cpp  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini
Servers/ChatServer1/: AsioIOServicePool.h  CMakeUserPresets.json  CServer.h  CSession.cpp  CSession.h  ChatGrpcClient.cpp  Const.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  UserMgr.cpp  UserMgr.h  config.ini
Servers/ChatServer2/: CMakeLists.txt  CServer.cpp  ChatGrpcClient.h  ChatServer.cpp  ChatServiceImpl.cpp  ChatServiceImpl.h  Data.h  MsgNode.cpp  MsgNode.h  MysqlDao.cpp  config.ini  message.grpc.pb.cc  message.grpc.pb.h  vcpkg.json
Servers/GateServer/: CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  message.pb.cc  message.pb.h  message.proto  vcpkg-configuration.json
Servers/StatusServer/: CMakeLists.txt  CMakeUserPresets.json  StatusServiceImpl.cpp  config.ini  message.pb.cc  message.pb.h  message.proto
Servers/VerifyServer/: config.js  config.json  const.js  package-lock.json  package.json  redis.js  server.js
StatusServer/: ConfigMgr.cpp  Const.h  StatusServer.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini
